# Wisdom-VkUtils

./: CMakeLists.txt  LICENSE.md  README.md  context.cpp  context.h  entry_main.cpp  format.cmake  format.h  generator.cpp  generator.h  local_gen.cpp  local_gen.h  util.h
cmake/: WisVkConfig.cmake.in  wisvkConfig.cmake.in
examples/: CMakeLists.txt
examples/basic_loader/: CMakeLists.txt  entry_main.cpp
wisvk/: vk_handle_traits.hpp  vk_libinit.h  vk_libinit.hpp  vk_loader.hpp
wisvk/wisvk/: vk_handle_traits.hpp  vk_libinit.hpp  vk_loader.hpp  vk_managed_handles.hpp  vk_movable.hpp
